# advent-of-code-2022

./: .gitignore  CMakeLists.txt  README.md
common/: advent-common.h  days.h
src/: day01.cpp  day02.cpp  day03.cpp  day04.cpp  day05.cpp  main.cpp
